# screen-vision

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-03-19-phone-camera-implementation.md  2026-03-19-screen-vision-implementation.md
docs/superpowers/specs/: 2026-03-19-phone-camera-integration.md  2026-03-19-screen-vision-design.md
skills/screen-vision/: SKILL.md
src/screen_vision/: __init__.py  __main__.py  analyze.py  audio.py  camera_bridge.py  capture.py  config.py  context.py  ocr.py  security.py  server.py  understanding.py  version_check.py  video.py  watcher.py
src/screen_vision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_analyze.py  test_audio.py  test_camera_bridge.py  test_capture.py  test_config.py  test_context.py  test_ocr.py  test_phone_tools.py  test_security.py  test_server.py  test_understand_tool.py  test_understanding.py  test_video.py  test_watcher.py
